# keops

./: .gitignore  __init__.py  convo_gaussienne.ipynb  jaxtest.py  jaxtest2.py  jaxtest3.py  keops_bridge.cpp  keops_bridge.cpp.save  setup.py  square.cpp  square.dylib  square_jax.py  square_jax_fw.py  test.py  test_x_square.py  testimp.py  x_square.py
core/: __init__.py  __init__.py.backup  device_utils.py  formulas.py  keops_autodiff.py  keops_executor.py  keops_functions.py  keops_hessian.py  keops_higher_order.py  keops_higher_order_final.py  keops_jax.py  keops_jit.py  keops_jvp.py
ffi/: CMakeLists.txt  libx_square.dylib  x_square.cpp
keops_jax/: __init__.py  setup.py  test_derivatives_final.py  test_ordre_superieur_final.py
keops_jax.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
keops_jax/core/: __init__.py  advanced_interface.py  device_utils.py  formulas.py  init.py  jax_interface.py  jax_interface2.py  jax_interface3.py  jax_interface_nth_order.py  jax_keops_final.py  jax_keops_recursive.py  keops_callback.py  keops_executor.py  keops_executor_derivate.py  keops_executor_derivate3.py  keops_executor_nth_order.py
keops_jax/tests/: debug.py  demo_usage.py  test_derivate.py  test_derivate2.py  test_derivatives_vector.py  test_finale.py  test_hessian_debug.py  test_higher_order.py  test_integration.py  test_interface_direct.py  test_keops_option2.py  test_multi.py  test_no_torch.py  test_nth_order_working.py  test_order_n_comprehensive.py  (+5 more)
keops_jax2/: __init__.py  test_derivatives_final.py
tests/: __init__.py  test.py  test_import.py
(+7 files in other folders)
